ci: use project-scoped sanity check for Firebase auth

--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -35,7 +35,7 @@ jobs:
           export GOOGLE_APPLICATION_CREDENTIALS="$RUNNER_TEMP/sa.json"
           echo "GOOGLE_APPLICATION_CREDENTIALS=$RUNNER_TEMP/sa.json" >> $GITHUB_ENV
           echo "Key size: $(wc -c < "$RUNNER_TEMP/sa.json") bytes"
-          firebase --project career-app-prod-dh projects:list > /dev/null
+          firebase hosting:sites:list --project career-app-prod-dh > /dev/null
 
       - name: Deploy to production site
         run: |
