--- a/.github/workflows/deploy-prod.yml
+++ b/.github/workflows/deploy-prod.yml
@@ -27,15 +27,23 @@ jobs:
           node-version: '20'
       - run: npm i -g firebase-tools
 
-      - name: Auth to Firebase (prod)
-        env:
-          FIREBASE_SERVICE_ACCOUNT_PROD: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_PROD }}
+      - name: Google Auth (DEV)
+        uses: google-github-actions/auth@v2
+        with:
+          credentials_json: ${{ secrets.FIREBASE_SERVICE_ACCOUNT_PROD }}
+
+      - name: Verify ADC
         run: |
-          printf '%s' "$FIREBASE_SERVICE_ACCOUNT_PROD" > "$RUNNER_TEMP/sa.json"
-          export GOOGLE_APPLICATION_CREDENTIALS="$RUNNER_TEMP/sa.json"
-          echo "GOOGLE_APPLICATION_CREDENTIALS=$RUNNER_TEMP/sa.json" >> $GITHUB_ENV
-          echo "Key size: $(wc -c < "$RUNNER_TEMP/sa.json") bytes"
-          firebase hosting:sites:list --project career-app-prod-dh > /dev/null
+          gcloud auth list
+          echo "ADC set? $(python - <<'PY'
+          import google.auth
+          creds, proj = google.auth.default()
+          print(bool(creds))
+          PY
+          )"
+          
+      - name: Firebase sanity check (prod)
+        run: firebase hosting:sites:list --project career-app-prod-dh
 
       - name: Deploy to production site
         run: |
