--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -28,7 +28,9 @@ jobs:
         uses: actions/setup-node@v4
         with:
           node-version: '20'
-      - run: npm i -g firebase-tools
+      - run: |
+          npm install -g firebase-tools@latest
+          firebase --version
 
       - name: Google Auth (DEV)
         uses: google-github-actions/auth@v2
