--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -53,11 +53,23 @@ jobs:
           # Show CLI version
           firebase --version
 
-          # Pass the site ID as the second positional arg (avoids --site flag issues).
-          OUT="$(firebase hosting:channel:deploy pr-$PRNUM career-app-web-dev-dh \
+          CHANNEL="pr-$PRNUM"
+          SITE="career-app-web-dev-dh"
+
+          BASE_CMD=(firebase hosting:channel:deploy "$CHANNEL" \
             --project career-app-dev-dh \
             --expires 7d \
-            --json)"
+            --json)
+
+          if firebase hosting:channel:deploy --help 2>&1 | grep -q -- '--site'; then
+            echo "Using Firebase CLI --site flag for preview deploy."
+            DEPLOY_CMD=("${BASE_CMD[@]}" --site "$SITE")
+          else
+            echo "Firebase CLI missing --site flag; falling back to --only hosting:$SITE."
+            DEPLOY_CMD=("${BASE_CMD[@]}" --only "hosting:$SITE")
+          fi
+
+          OUT="$("${DEPLOY_CMD[@]}")"
 
           echo "$OUT" > deploy_output.json
           # Extract the first URL from the JSON safely
