--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -55,6 +55,7 @@ jobs:
 
           CHANNEL="pr-$PRNUM"
           SITE="career-app-web-dev-dh"
+          TARGET="dev"  # Hosting target defined in .firebaserc
 
           DEPLOY_CMD=(firebase hosting:channel:deploy "$CHANNEL")
 
@@ -62,8 +63,8 @@ jobs:
             echo "Using Firebase CLI --site flag for preview deploy."
             DEPLOY_CMD+=("--site" "$SITE")
           else
-            echo "Firebase CLI missing --site flag; passing site as positional arg."
-            DEPLOY_CMD+=("$SITE")
+            echo "Firebase CLI missing --site flag; falling back to --only hosting:$TARGET."
+            DEPLOY_CMD+=("--only" "hosting:$TARGET")
           fi
 
           DEPLOY_CMD+=(
