--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -55,23 +55,16 @@ jobs:
 
           CHANNEL="pr-$PRNUM"
           SITE="career-app-web-dev-dh"
-          TARGET="dev"  # Hosting target defined in .firebaserc
-
-          DEPLOY_CMD=(firebase hosting:channel:deploy "$CHANNEL")
 
           if firebase hosting:channel:deploy --help 2>&1 | grep -q -- '--site'; then
             echo "Using Firebase CLI --site flag for preview deploy."
-            DEPLOY_CMD+=("--site" "$SITE")
+            DEPLOY_CMD=(firebase hosting:channel:deploy "$CHANNEL" --site "$SITE")
           else
-            echo "Firebase CLI missing --site flag; falling back to --only hosting:$TARGET."
-            DEPLOY_CMD+=("--only" "hosting:$TARGET")
+            echo "Firebase CLI missing --site flag; passing site as positional arg."
+            DEPLOY_CMD=(firebase hosting:channel:deploy "$CHANNEL" "$SITE")
           fi
 
-          DEPLOY_CMD+=(
-            --project career-app-dev-dh
-            --expires 7d
-            --json
-          )
+          DEPLOY_CMD+=(--project career-app-dev-dh --expires 7d --json)
 
           OUT="$("${DEPLOY_CMD[@]}")"
 
