--- a/.github/workflows/preview.yml
+++ b/.github/workflows/preview.yml
@@ -55,6 +55,7 @@ jobs:
 
           CHANNEL="pr-$PRNUM"
           CONFIG="firebase.preview.json"
+          SITE="career-app-web-dev-dh"
 
           OUT="$(firebase hosting:channel:deploy "$CHANNEL" \
             --project career-app-dev-dh \
@@ -63,30 +64,70 @@ jobs:
             --json)"
 
           echo "$OUT" > deploy_output.json
-          # Extract URL from the JSON (covers multiple CLI formats, falls back to first https:// match)
-          URL=$(node -e "
+
+          # Query the channel list as a fallback source for the preview URL
+          LIST_OUT="$(firebase hosting:channel:list "$SITE" \
+            --project career-app-dev-dh \
+            --json || true)"
+          echo "$LIST_OUT" > channel_list.json
+
+          # Extract URL from deploy/channel JSON (covers new + legacy CLI formats)
+          URL=$(CHANNEL="$CHANNEL" node -e "
 const fs = require('fs');
-const text = fs.readFileSync('deploy_output.json', 'utf8');
-let data;
-try { data = JSON.parse(text); } catch (_) { data = null; }
-const pick = (obj) => obj && obj.find(Boolean);
+const channelId = process.env.CHANNEL || '';
 const candidates = [];
-const push = (value) => { if (value) candidates.push(value); };
-if (data) {
-  push(data.result?.[0]?.result?.hosting?.deploys?.[0]?.urls?.[0]);
-  push(data.result?.[0]?.result?.hosting?.deploys?.[0]?.url);
-  push(data.result?.[0]?.result?.channel?.url);
-  push(data.result?.[0]?.result?.hosting?.preview?.url);
-  push(data.result?.[0]?.result?.hosting?.url);
-  push(data.channel?.url);
-  push(data.url);
-}
-let url = candidates.find(Boolean);
-if (!url) {
+const add = (val) => { if (val) candidates.push(val); };
+const firstMatch = (text) => {
   const match = text.match(/https?:\\/\\/[^\\s\"']+/);
-  url = match ? match[0] : '';
-}
-console.log(url || '');
+  return match ? match[0] : '';
+};
+
+const tryFile = (path, fnText, fnJson) => {
+  if (!fs.existsSync(path)) return;
+  const text = fs.readFileSync(path, 'utf8');
+  if (fnText) add(fnText(text));
+  if (fnJson) {
+    try {
+      const data = JSON.parse(text);
+      add(fnJson(data));
+    } catch (_) {}
+  }
+};
+
+const extractDeploy = (data) => {
+  const r = data?.result?.[0]?.result;
+  const hosting = r?.hosting;
+  add(hosting?.deploys?.[0]?.urls?.[0]);
+  add(hosting?.deploys?.[0]?.url);
+  add(hosting?.preview?.url);
+  add(hosting?.url);
+  add(r?.channel?.url);
+  add(data?.channel?.url);
+  add(data?.url);
+  return null;
+};
+
+const extractList = (data) => {
+  const entries = data?.result?.channels || data?.channels || [];
+  const match = entries.find((c) => {
+    if (!c) return false;
+    if (c.id && c.id === channelId) return true;
+    if (c.channelId && c.channelId === channelId) return true;
+    if (c.name && channelId && c.name.endsWith(`/channels/${channelId}`)) return true;
+    return false;
+  });
+  if (match) {
+    add(match.url);
+    add(match.urls?.[0]);
+  }
+  return null;
+};
+
+tryFile('deploy_output.json', firstMatch, extractDeploy);
+tryFile('channel_list.json', firstMatch, extractList);
+
+const url = candidates.find(Boolean) || '';
+console.log(url);
 ")
           echo "url=$URL" >> $GITHUB_OUTPUT
           echo "Preview URL: $URL"
